--- a/www/templates/themes/expense-dashboard/html/expense-dashboard.html
+++ b/www/templates/themes/expense-dashboard/html/expense-dashboard.html
@@ -27,7 +27,7 @@
            ng-click="showGridBottomSheet($event)"
            aria-label="showListBottomSheet">
             <i class="ion-android-share-alt"></i>
-        </a> 
+        </a>
     </md-toolbar><!--end expense toolbar section-->
 
     <!--expense content section-->
@@ -117,7 +117,7 @@
                         <div class="md-grid-text"> Instagram</div>
                     </a>
                 </md-list-item-->
-            </md-list> 
+            </md-list>
             <!--end list section-->
         </md-bottom-sheet>
      </script>
@@ -128,7 +128,7 @@
                <p class="detail">Senarai Pautan Berkaitan Orang Awam</p>
                <hr/>
                <!--list section-->
-               <md-list>
+               <!-- <md-list>
                 <md-list-item class="row menu-item" ng-click="navigateTo('app.pknsProperty')">
                     <div class="col-33">
                            <i class="fa fa-bank"></i>
@@ -155,7 +155,7 @@
                             <span>Direktori</span>
                      </div>
                </md-list-item>
-             </md-list>
+             </md-list> -->
                <!--end list section-->
            </md-bottom-sheet>
        </script>
