--- a/www/templates/themes/expense-dashboard/html/expense-dashboard.html
+++ b/www/templates/themes/expense-dashboard/html/expense-dashboard.html
@@ -166,7 +166,7 @@
                <p class="detail">Senarai Pautan Berkaitan Warga PKNS</p>
                <hr/>
                <!--list section-->
-               <md-list>
+               <!-- <md-list>
                  <md-list-item class="row menu-item" ng-click="navigateTo('app.sistemDalamanPKNS')">
                    <div class="col-33">
                           <i class="fa fa-archive"></i>
@@ -175,7 +175,7 @@
                           <span>Sistem dalaman PKNS</span>
                         </div>
                 </md-list-item>
-              </md-list>
+              </md-list> -->
                <!--end list section-->
            </md-bottom-sheet>
        </script>
@@ -186,7 +186,7 @@
                  <p class="detail">Senarai Pautan Berkaitan Usahawan</p>
                  <hr/>
                  <!--list section-->
-                 <md-list>
+                 <!-- <md-list>
                      <md-list-item class="row menu-item" ng-click="navigateTo('app.programKeusahawanan')">
                       <div class="col-33">
                              <i class="fa fa-tasks"></i>
@@ -222,7 +222,7 @@
                               <span>Peluang Perniagaan</span>
                        </div>
                      </md-list-item>
-                 </md-list>
+                 </md-list> -->
                  <!--end list section-->
              </md-bottom-sheet>
        </script>
@@ -233,7 +233,7 @@
                  <p class="detail">Senarai Perkhidmatan atas talian yang berkaitan dengan PKNS</p>
                  <hr/>
                  <!--list section-->
-                 <md-list>
+                 <!-- <md-list>
                   <md-list-item class="row menu-item" ng-click="navigateTo('app.sebutHarga')">
                       <div class="col-33">
                              <i class="fa fa-newspaper-o"></i>
@@ -260,7 +260,7 @@
                               <span>Pembayaran Online POS</span>
                        </div>
                  </md-list-item>
-               </md-list>
+               </md-list> -->
                  <!--end list section-->
              </md-bottom-sheet>
        </script>
