--- a/scss/style.scss
+++ b/scss/style.scss
@@ -355,7 +355,7 @@ md-sidenav {
         height: 100%; }
 
 .material-background-bar{
- background-image: url('../img/main_bg.png') !important;
+ background-image: url('../img/sprm/sprm-main-banner.jpg') !important;
  background-position: center !important;
 }
 
@@ -2168,13 +2168,13 @@ md-sidenav {
     }
 
     h1 {
-      color: $color_black;
+      color: #F44336;
       font-size: 30px;
       font-weight: 400;
     }
 
     h2 {
-      color: $color_black;
+      color: #F44336;
       font-size: 16px;
     }
 
