--- a/www/templates/themes/expense-dashboard/html/expense-dashboard.html
+++ b/www/templates/themes/expense-dashboard/html/expense-dashboard.html
@@ -19,7 +19,13 @@
     <!--expense toolbar section-->
     <md-toolbar class="bar-subheader md-tall md-primary toolbar-expense material-background-bar">
         <div>
-            <img src="img/logoSPRM.png" class="user-img"/>
+            <img src=""/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
+            <br/>
               <h1><b>SPRM</b></h1>
               <h2>Suruhanjaya Pencegah Rasuah Malaysia</h2>
         </div>
@@ -41,7 +47,7 @@
                 </div>
                 <div class="col-80 menu">
                     <p class="header">Orang Awam</p>
-                    <!--p class="detail">khidmat dan servis untuk orang Awam</p-->
+                    <p class="detail">khidmat dan servis untuk orang Awam</p>
                 </div>
             </md-list-item>
             <md-divider></md-divider>
@@ -52,7 +58,7 @@
                 </div>
                 <div class="col-80 menu">
                     <p class="header">Warga SPRM</p>
-                    <!--p class="detail">Ahli dan Staf PKNS</p-->
+                    <p class="detail">Ahli dan Staf SPRM</p>
                 </div>
             </md-list-item>
             <md-divider></md-divider>
@@ -63,7 +69,7 @@
                 </div>
                 <div class="col-80 menu">
                     <p class="header">Agensi Kerajaan</p>
-                    <!--p class="detail">Pengusaha dan Pemaju</p-->
+                    <p class="detail">Pengusaha dan Pemaju</p>
                 </div>
             </md-list-item>
             <md-divider></md-divider>
@@ -86,7 +92,6 @@
                 </div>
                 <div class="col-80 menu">
                     <p class="header">Hubungi Kami</p>
-
                     <p class="detail">Pertanyaan dan masalah sila hubungi kami</p>
                 </div>
             </md-list-item>
@@ -126,7 +131,7 @@
            <md-bottom-sheet class="md-list md-has-header">
                <p class="sub-menu-header">Orang Awam</p>
                <p class="detail">Senarai Pautan Berkaitan Orang Awam</p>
-               <hr/>
+               <!-- <hr/> -->
                <!--list section-->
                <!-- <md-list>
                 <md-list-item class="row menu-item" ng-click="navigateTo('app.pknsProperty')">
@@ -162,9 +167,9 @@
 
        <script type="text/ng-template" id="ui-list-bottom-sheet-template2">
            <md-bottom-sheet class="md-list md-has-header">
-               <p class="sub-menu-header"><b>Warga PKNS</b></p>
-               <p class="detail">Senarai Pautan Berkaitan Warga PKNS</p>
-               <hr/>
+               <p class="sub-menu-header"><b>Warga SPRM</b></p>
+               <p class="detail">Senarai Pautan Berkaitan Warga SPRM</p>
+               <!-- <hr/> -->
                <!--list section-->
                <!-- <md-list>
                  <md-list-item class="row menu-item" ng-click="navigateTo('app.sistemDalamanPKNS')">
@@ -182,9 +187,9 @@
 
        <script type="text/ng-template" id="ui-list-bottom-sheet-template3">
              <md-bottom-sheet class="md-list md-has-header">
-                 <p class="sub-menu-header"><b>Usahawan</b></p>
-                 <p class="detail">Senarai Pautan Berkaitan Usahawan</p>
-                 <hr/>
+                 <p class="sub-menu-header"><b>Agensi Kerajaan</b></p>
+                 <p class="detail">Pengusaha dan Pemaju</p>
+                 <!-- <hr/> -->
                  <!--list section-->
                  <!-- <md-list>
                      <md-list-item class="row menu-item" ng-click="navigateTo('app.programKeusahawanan')">
@@ -230,8 +235,8 @@
        <script type="text/ng-template" id="ui-list-bottom-sheet-template4">
              <md-bottom-sheet class="md-list md-has-header">
                  <p class="sub-menu-header"><b>Perkhidmatan</b></p>
-                 <p class="detail">Senarai Perkhidmatan atas talian yang berkaitan dengan PKNS</p>
-                 <hr/>
+                 <p class="detail">Senarai Perkhidmatan atas talian</p>
+                 <!-- <hr/> -->
                  <!--list section-->
                  <!-- <md-list>
                   <md-list-item class="row menu-item" ng-click="navigateTo('app.sebutHarga')">
