icon/bg/sideBG/import img

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -355,7 +355,7 @@ md-sidenav {
         height: 100%; }
 
 .material-background-bar{
- background-image: url('../img/sprm/sprm-main-banner.jpg') !important;
+ background-image: url('../img/sprm/background.png') !important;
  background-position: center !important;
 }
 
