--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -19,11 +19,11 @@
         <div class="material-background" id="toggle-menu-left-header">
             <!--menu header section-->
             <div class="menu-left-header">
-                <img class="user-img" src="img/pkns.png">
+                <img class="user-img" src="img/sprm/icon2.png">
                   <p>
-                      <span class="title">PKNS</span>
+                      <span class="title">SPRM</span>
                       <br/>
-                      <span class="sub-title">Perbadanan Kemajuan Negeri Selangor</span>
+                      <span class="sub-title">Suruhanjaya Pencegah Rasuah Malaysia</span>
                   </p>
             </div><!--end menu header section-->
         </div> <!--menu content section-->
