--- a/www/templates/themes/expense-dashboard/html/expense-dashboard.html
+++ b/www/templates/themes/expense-dashboard/html/expense-dashboard.html
@@ -19,13 +19,7 @@
     <!--expense toolbar section-->
     <md-toolbar class="bar-subheader md-tall md-primary toolbar-expense material-background-bar">
         <div>
-            <img src=""/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
-            <br/>
+            <img src="img/sprm/icon2.png"/>
               <h1><b>SPRM</b></h1>
               <h2>Suruhanjaya Pencegah Rasuah Malaysia</h2>
         </div>
