--- a/www/css/style.css
+++ b/www/css/style.css
@@ -207,7 +207,7 @@ md-sidenav {
   height: 100%; }
 
 .material-background-bar {
-  background-image: url("../img/sprm/sprm-main-banner.jpg") !important;
+  background-image: url("../img/sprm/background.png") !important;
   background-position: center !important; }
 
 .material-background-nav-bar {
