splashscreen/icon/menu&sidemenu testing

--- a/www/templates/themes/expense-dashboard/html/expense-dashboard.html
+++ b/www/templates/themes/expense-dashboard/html/expense-dashboard.html
@@ -68,17 +68,53 @@
             </md-list-item>
             <md-divider></md-divider>
 
-            <!--md-list-item class="row" ng-click="showListBottomSheet4($event4)">
+            <md-list-item class="row" ng-click="showListBottomSheet4($event4)">
                 <div class="col-20 icon">
-                    <i class="fa fa-cog"></i>
+                    <i class="fa fa-bullhorn"></i>
                 </div>
                 <div class="col-80 menu">
-                    <p class="header">Perkhidmatan</p>
+                    <p class="header">Terkini/Pengumuman</p>
 
-                    <p class="detail">Servis yang diberikan.</p>
+                    <p class="detail">Berita semasa</p>
                 </div>
             </md-list-item>
-            <md-divider></md-divider-->
+            <md-divider></md-divider>
+
+            <md-list-item class="row" ng-click="showListBottomSheet5($event5)">
+                <div class="col-20 icon">
+                    <i class="fa fa-newspaper-o"></i>
+                </div>
+                <div class="col-80 menu">
+                    <p class="header">Kenyataan Media</p>
+
+                    <p class="detail">Laporan khas</p>
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+
+            <md-list-item class="row" ng-click="showListBottomSheet6($event6)">
+                <div class="col-20 icon">
+                    <i class="fa fa-newspaper-o"></i>
+                </div>
+                <div class="col-80 menu">
+                    <p class="header">Jadual Bicara</p>
+
+                    <p class="detail">Tarikh perbicaraan</p>
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
+
+            <md-list-item class="row" ng-click="showListBottomSheet7($event7)">
+                <div class="col-20 icon">
+                    <i class="fa fa-newspaper-o"></i>
+                </div>
+                <div class="col-80 menu">
+                    <p class="header">Data Pesalah</p>
+
+                    <p class="detail">Maklumat tentang pesalah</p>
+                </div>
+            </md-list-item>
+            <md-divider></md-divider>
 
             <md-list-item class="row" ng-click="navigateTo('app.contractUs')">
                 <div class="col-20 icon">
@@ -86,7 +122,7 @@
                 </div>
                 <div class="col-80 menu">
                     <p class="header">Hubungi Kami</p>
-                    <p class="detail">Pertanyaan dan masalah sila hubungi kami</p>
+                    <p class="detail">Pertanyaan dan masalah</p>
                 </div>
             </md-list-item>
             <md-divider></md-divider>
