--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -55,7 +55,7 @@
                         <i class="fa fa-newspaper-o"></i>
                     </div>
                     <div class="col-66">
-                        <span>Berita/Pengumuman</span>
+                        <span>Laporkan Rasuah</span>
                     </div>
                 </div>
                 <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard2')">
@@ -63,7 +63,7 @@
                         <i class="fa fa-shield"></i>
                     </div>
                     <div class="col-66">
-                        <span>Syarikat Anak PKNS</span>
+                        <span>Statistik Tangkapan</span>
                     </div>
                 </div>
                 <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard')">
@@ -71,7 +71,16 @@
                         <i class="fa fa-institution"></i>
                     </div>
                     <div class="col-66">
-                        <span>Agensi Berkaitan</span>
+                        <span>Perkhidmatan atas Talian</span>
+                    </div>
+                </div>
+                <md-subheader class="md-warn">Mini site</md-subheader>
+                <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard1')">
+                    <div class="col-33">
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="col-66">
+                        <span>MACA</span>
                     </div>
                 </div>
                 <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard1')">
@@ -79,7 +88,7 @@
                         <i class="fa fa-link"></i>
                     </div>
                     <div class="col-66">
-                        <span>Pautan Pantas</span>
+                        <span>ACE</span>
                     </div>
                 </div>
                 <br>
@@ -98,6 +107,14 @@
                     </div>
                     <div class="col-66">
                         <span>Hubungi Kami</span>
+                    </div>
+                </div>
+                <div class="row menu-item"  ng-click="navigateTo('app.contractUs')">
+                    <div class="col-33">
+                        <i class="fa fa-phone"></i>
+                    </div>
+                    <div class="col-66">
+                        <span>Radio (macc.fm)</span>
                     </div>
                 </div>
             </div>
