menu frontpage and submenu added

--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
@@ -16,7 +16,7 @@
                         <i class="fa fa-bar-chart"></i>
                     </div>
                     <div class="col-80">
-                        Statistic Applikasi Atas Talian
+                        Single Sign-On
                     </div>
                     <div class="col-10">
                         <i class="fa fa-angle-right"></i>
@@ -30,7 +30,7 @@
                         <i class="fa fa-tasks"></i>
                     </div>
                     <div class="col-80">
-                        Tender / Sebut Harga
+                        Pusat Sumber
                     </div>
                     <div class="col-10">
                         <i class="fa fa-angle-right"></i>
@@ -44,7 +44,7 @@
                         <i class="fa fa-envelope-o"></i>
                     </div>
                     <div class="col-80">
-                        Webmel Kakitangan PKNS
+                        Webmel
                     </div>
                     <div class="col-10">
                         <i class="fa fa-angle-right"></i>
@@ -58,7 +58,7 @@
                         <i class="fa fa-comments-o"></i>
                     </div>
                     <div class="col-80">
-                        Maklumbalas / Pertanyaan
+                        HRMIS
                     </div>
                     <div class="col-10">
                         <i class="fa fa-angle-right"></i>
@@ -72,7 +72,35 @@
                         <i class="fa fa-picture-o"></i>
                     </div>
                     <div class="col-80">
-                        Galeri Media
+                        Aduan Pentadbir Portal
+                    </div>
+                    <div class="col-10">
+                        <i class="fa fa-angle-right"></i>
+                    </div>
+                </div>
+            </md-whiteframe>
+
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+                <div class="row">
+                    <div class="col-10">
+                        <i class="fa fa-picture-o"></i>
+                    </div>
+                    <div class="col-80">
+                        Portal MyGovernment
+                    </div>
+                    <div class="col-10">
+                        <i class="fa fa-angle-right"></i>
+                    </div>
+                </div>
+            </md-whiteframe>
+
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+                <div class="row">
+                    <div class="col-10">
+                        <i class="fa fa-tasks"></i>
+                    </div>
+                    <div class="col-80">
+                        South East Asia Parties Against Corruption
                     </div>
                     <div class="col-10">
                         <i class="fa fa-angle-right"></i>
