--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -55,7 +55,7 @@
                         <i class="fa fa-newspaper-o"></i>
                     </div>
                     <div class="col-66">
-                        <span>Laporkan Rasuah</span>
+                        <span>Berita/Pengumuman</span>
                     </div>
                 </div>
                 <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard2')">
@@ -63,7 +63,7 @@
                         <i class="fa fa-shield"></i>
                     </div>
                     <div class="col-66">
-                        <span>Statistik Tangkapan</span>
+                        <span>Syarikat Anak PKNS</span>
                     </div>
                 </div>
                 <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard')">
@@ -71,16 +71,7 @@
                         <i class="fa fa-institution"></i>
                     </div>
                     <div class="col-66">
-                        <span>Perkhidmatan atas Talian</span>
-                    </div>
-                </div>
-                <md-subheader class="md-warn">Mini site</md-subheader>
-                <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard1')">
-                    <div class="col-33">
-                        <i class="fa fa-link"></i>
-                    </div>
-                    <div class="col-66">
-                        <span>MACA</span>
+                        <span>Agensi Berkaitan</span>
                     </div>
                 </div>
                 <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard1')">
@@ -88,7 +79,7 @@
                         <i class="fa fa-link"></i>
                     </div>
                     <div class="col-66">
-                        <span>ACE</span>
+                        <span>Pautan Pantas</span>
                     </div>
                 </div>
                 <br>
@@ -107,14 +98,6 @@
                     </div>
                     <div class="col-66">
                         <span>Hubungi Kami</span>
-                    </div>
-                </div>
-                <div class="row menu-item"  ng-click="navigateTo('app.contractUs')">
-                    <div class="col-33">
-                        <i class="fa fa-phone"></i>
-                    </div>
-                    <div class="col-66">
-                        <span>Radio (macc.fm)</span>
                     </div>
                 </div>
             </div>
