--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -50,36 +50,53 @@
                         <span>Laman Web</span>
                     </div>
                 </div>
-                <div class="row menu-item"  ng-click="navigateTo('app.productList')">
+                <div class="row menu-item"  ng-click="navigateTo('app.')">
                     <div class="col-33">
                         <i class="fa fa-newspaper-o"></i>
                     </div>
                     <div class="col-66">
-                        <span>Berita/Pengumuman</span>
+                        <span>Laporkan Rasuah</span>
                     </div>
                 </div>
-                <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard2')">
+                <div class="row menu-item"  ng-click="navigateTo('app.')">
                     <div class="col-33">
                         <i class="fa fa-shield"></i>
                     </div>
                     <div class="col-66">
-                        <span>Syarikat Anak PKNS</span>
+                        <span>Permohonan Program</span>
                     </div>
                 </div>
-                <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard')">
+                <div class="row menu-item"  ng-click="navigateTo('app.')">
                     <div class="col-33">
                         <i class="fa fa-institution"></i>
                     </div>
                     <div class="col-66">
-                        <span>Agensi Berkaitan</span>
+                        <span>Statistik Tangkapan</span>
                     </div>
                 </div>
-                <div class="row menu-item"  ng-click="navigateTo('app.menuDashboard1')">
+                <div class="row menu-item"  ng-click="navigateTo('app.')">
                     <div class="col-33">
                         <i class="fa fa-link"></i>
                     </div>
                     <div class="col-66">
-                        <span>Pautan Pantas</span>
+                        <span>Perkhidmatan atas Talian</span>
+                    </div>
+                </div>
+              <md-subheader class="md-warn">Mini Site</md-subheader>
+                <div class="row menu-item"  ng-click="navigateTo('app.')">
+                    <div class="col-33">
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="col-66">
+                        <span>MACA</span>
+                    </div>
+                </div>
+                <div class="row menu-item"  ng-click="navigateTo('app.')">
+                    <div class="col-33">
+                        <i class="fa fa-link"></i>
+                    </div>
+                    <div class="col-66">
+                        <span>ACE</span>
                     </div>
                 </div>
                 <br>
