--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -131,21 +131,30 @@
                       <i class="fa fa-globe"></i>
                       <span>Laman Web</span>
                   </md-list-item>
-                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.productList')">
+                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.newsFeed')">
+                      <i class="fa fa-globe"></i>
+                      <span>Laporkan Rasuah</span>
+                  </md-list-item>
+                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.newsFeed')">
+                      <i class="fa fa-globe"></i>
+                      <span>Permohonan Program</span>
+                  </md-list-item>
+                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.newsFeed')">
+                      <i class="fa fa-globe"></i>
+                      <span>Statistik Tangkapan</span>
+                  </md-list-item>
+                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.')">
                       <i class="fa fa-newspaper-o"></i>
-                      <span>Berita/Pengumuman</span>
+                      <span>Perkhidmatan atas Talian</span>
                   </md-list-item>
-                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.menuDashboard2')">
+              <md-subheader class="md-warn">Mini Site</md-subheader>
+                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.')">
                       <i class="fa fa-shield"></i>
-                      <span>Syarikat Anak PKNS</span>
+                      <span>MACA</span>
                   </md-list-item>
-                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.menuDashboard')">
+                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.')">
                       <i class="fa fa-institution"></i>
-                      <span>Agensi Berkaitan</span>
-                  </md-list-item>
-                  <md-list-item class="menu-list-item" ng-click="navigateTo('app.menuDashboard1')">
-                      <i class="fa fa-link"></i>
-                      <span>Pautan Pantas</span>
+                      <span>ACE</span>
                   </md-list-item>
                   <hr/>
                   <md-list-item class="menu-list-item" ng-click="openMap(destinationLocation)">
