--- a/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/menu-dashboardAgensiKerajaan.html
+++ b/www/templates/themes/expense-dashboard/html/Agensi-Kerajaan/menu-dashboardAgensiKerajaan.html
@@ -10,7 +10,7 @@
     <ion-content id="menu-dashboard-content">
         <!--panel footer section-->
         <div class="menu-dashboard-footer">
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.statistic')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.bidangKuasa')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-bar-chart"></i>
@@ -24,7 +24,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenaliRasuah')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-question"></i>
@@ -38,7 +38,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanMedia')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-television"></i>
@@ -52,7 +52,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.keterlibatan')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-tasks"></i>
@@ -66,7 +66,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.webmel')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.permohonanProgram')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-envelope-o"></i>
@@ -80,7 +80,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.contractUs')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-phone"></i>
@@ -94,7 +94,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.laporkanRasuah')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-tasks"></i>
@@ -108,7 +108,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.maklumbalas')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.sistemMaklumat')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-comments-o"></i>
@@ -122,7 +122,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.eSTK')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-picture-o"></i>
@@ -136,7 +136,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.senaraiPegawai')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-picture-o"></i>
@@ -150,7 +150,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-tasks"></i>
