--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/menu-dashboardOrangAwam.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/menu-dashboardOrangAwam.html
@@ -10,7 +10,7 @@
     <ion-content id="menu-dashboard-content">
         <!--panel footer section-->
         <div class="menu-dashboard-footer">
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.statistic')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.soalanLazim')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-question"></i>
@@ -24,7 +24,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.iklan')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-newspaper-o"></i>
@@ -38,7 +38,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.contractUs')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-phone"></i>
@@ -52,7 +52,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanMedia')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-television"></i>
@@ -66,7 +66,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.webmel')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tawaranTender')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-money"></i>
@@ -80,7 +80,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.maklumbalas')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-globe"></i>
@@ -94,7 +94,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenaliRasuah')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-info"></i>
@@ -108,7 +108,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.laporkanRasuah')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-warning"></i>
@@ -122,7 +122,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.dataPesalah')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-book"></i>
@@ -136,7 +136,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.cms')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-gear"></i>
@@ -150,7 +150,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.mekanisme')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-balance-scale"></i>
@@ -164,7 +164,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.nkra')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-hand-stop-o"></i>
@@ -178,7 +178,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.jabatanPM')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-building"></i>
