--- a/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/Warga-SPRM/menu-dashboardWargaSPRM.html
@@ -10,7 +10,7 @@
     <ion-content id="menu-dashboard-content">
         <!--panel footer section-->
         <div class="menu-dashboard-footer">
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.statistic')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.singleSignon')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-bar-chart"></i>
@@ -24,7 +24,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.pusatSumber')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-tasks"></i>
@@ -38,7 +38,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.webmel')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.Webmel')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-envelope-o"></i>
@@ -52,7 +52,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.maklumbalas')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.HRMIS')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-comments-o"></i>
@@ -66,7 +66,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.aduanPentadbir')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-picture-o"></i>
@@ -80,7 +80,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.galeri')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.myGovernment')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-picture-o"></i>
@@ -94,7 +94,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.tender')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.seapac')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-tasks"></i>
