--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/laporkan-rasuah.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/laporkan-rasuah.html
@@ -11,7 +11,7 @@
         <!--panel section-->
         <div class="menu-panel">
             <div class="row">
-                <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="CMS">
+                <div class="col-33" ng-click="navigateTo('app.CMS')">
                   <i class="fa fa-laptop"></i>
                   <p>CMS</p>
                 </div>
@@ -19,37 +19,37 @@
                   <i class="fa fa-phone"></i>
                   <p>Talian Bebas Tol </p>
                 </div>
-                <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="Alamat Pejabat">
+                <div class="col-33" ng-click="navigateTo('app.alamatPejabat')">
                   <i class="fa fa-edit"></i>
                   <p>Alamat Pejabat</p>
                 </div>
             </div>
 
             <div class="row">
-              <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="Email">
+              <div class="col-33" ng-click="sentEmail(contractInfo.email)">
                 <i class="fa fa-envelope-o"></i>
                 <p>Email</p>
               </div>
-              <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="SMS">
+              <div class="col-33" ng-click="sentSms(contractInfo.sms)">
                 <i class="fa fa-comments"></i>
                 <p>SMS</p>
               </div>
-              <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="Faks">
+              <div class="col-33" ng-click="navigateTo('app.')">
                 <i class="fa fa-print"></i>
                 <p>Faks</p>
               </div>
             </div>
 
             <div class="row">
-              <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="">
+              <div class="col-33">
                 <!-- <img src="img/pautan2/jpbd.png" class="user-img"></i>
                 <p>Jabatan Perancangan Bandar dan Desa Negeri Selangor</p> -->
               </div>
-              <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="Surat Menyurat">
+              <div class="col-33" ng-click="navigateTo('app.')">
                 <i class="fa fa-envelope"></i>
                 <p>Surat Menyurat</p>
               </div>
-              <div class="col-33" ng-click="navigateTo('app.')" data-toggle="tooltip" data-placement="bottom" title="">
+              <div class="col-33">
                 <!-- <img src="img/pautan2/jkm.png" class="user-img"></i>
                 <p>Jabatan Kebajikan Masyarakat Selangor</p> -->
               </div>
