--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/jabatan-pm.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/jabatan-pm.html
@@ -1,4 +1,4 @@
-<ion-view title="Jabatan Perdana Menteri">
+<ion-view title="CMS">
   <ion-content class="iframe-parent" >
       <iframe class="iframe-wrapper" src="http://www.jpm.gov.my/post/modules/main/index.php?device=xhtml"></iframe>
   </ion-content>
