--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/laporkan-rasuah.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/laporkan-rasuah.html
@@ -45,7 +45,7 @@
                 <!-- <img src="img/pautan2/jpbd.png" class="user-img"></i>
                 <p>Jabatan Perancangan Bandar dan Desa Negeri Selangor</p> -->
               </div>
-              <div class="col-33" ng-click="navigateTo('app.')">
+              <div class="col-33" ng-click="navigateTo('app.alamatPejabat')">
                 <i class="fa fa-envelope"></i>
                 <p>Surat Menyurat</p>
               </div>
