--- a/www/templates/themes/expense-dashboard/html/menu-dashboardInfoSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/menu-dashboardInfoSPRM.html
@@ -10,7 +10,7 @@
     <ion-content id="menu-dashboard-content">
         <!--panel footer section-->
         <div class="menu-dashboard-footer">
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.productList')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-bar-chart"></i>
