--- a/www/templates/share-application-content/social-share/html/product-list.html
+++ b/www/templates/share-application-content/social-share/html/product-list.html
@@ -5,7 +5,7 @@
 <!--State name : app.productList-->
 <!--URL : #app/productList-->
 
-<ion-view view-title="Berita Dan Pengumuman">
+<ion-view view-title="Terkini Dan Pengumuman">
     <!--product list section-->
     <ion-content id="product-list-content" class="fade-in">
       <md-list>
