--- a/www/templates/themes/expense-dashboard/html/menu-dashboardInfoSPRM.html
+++ b/www/templates/themes/expense-dashboard/html/menu-dashboardInfoSPRM.html
@@ -24,7 +24,7 @@
                 </div>
             </md-whiteframe>
 
-            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.')">
+            <md-whiteframe class="md-whiteframe-z1" layout ng-click="navigateTo('app.kenyataanList')">
                 <div class="row">
                     <div class="col-10">
                         <i class="fa fa-tasks"></i>
