--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2168,13 +2168,13 @@ md-sidenav {
     }
 
     h1 {
-      color: #FD800A;
+      color: #080808;
       font-size: 30px;
       font-weight: 400;
     }
 
     h2 {
-      color: #FD800A;
+      color: #080808;
       font-size: 16px;
     }
 
