--- a/www/templates/menu/html/MACA.html
+++ b/www/templates/menu/html/MACA.html
@@ -1,4 +1,4 @@
-<ion-view title="Statistik Tangkapan">
+<ion-view title="MACA">
   <ion-content class="iframe-parent" >
       <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/maca?device=xhtml"></iframe>
   </ion-content>
