--- a/www/templates/themes/expense-dashboard/html/datapesalah.html
+++ b/www/templates/themes/expense-dashboard/html/datapesalah.html
@@ -1,4 +1,4 @@
-<ion-view title="Akademi PKNS">
+<ion-view title="Data Pesalah">
   <ion-content class="iframe-parent" >
       <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/index.php/penguatkuasaan/data-pesalah-rasuah?device=xhtml"></iframe>
   </ion-content>
