--- a/www/templates/themes/expense-dashboard/html/seapac.html
+++ b/www/templates/themes/expense-dashboard/html/seapac.html
@@ -1,4 +1,4 @@
-<ion-view title="Akademi PKNS">
+<ion-view title="South East Asia Parties Against Corruption">
   <ion-content class="iframe-parent" >
       <iframe class="iframe-wrapper" src="http://www.sea-pac.org/?device=xhtml"></iframe>
   </ion-content>
