--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -50,7 +50,7 @@
                         <span>Laman Web</span>
                     </div>
                 </div>
-                <div class="row menu-item"  ng-click="navigateTo('app.laporkanRasuah')">
+                <div class="row menu-item"  ng-click="navigateTo('app.laporkan_Rasuah')">
                     <div class="col-33">
                         <i class="fa fa-newspaper-o"></i>
                     </div>
