--- a/www/templates/themes/menu-dashboard/html/menu-dashboard2.html
+++ b/www/templates/themes/menu-dashboard/html/menu-dashboard2.html
@@ -5,7 +5,7 @@
 <!--State name : app.menuDashboard-->
 <!--URL : #app/menuDashboard-->
 
-<ion-view title="Syarikat Anak PKNS">
+<ion-view title="Perkhidmatan Atas talian">
     <!--menu dashboard section-->
     <ion-content id="menu-dashboard-content">
         <!--panel section-->
