--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/laporkan-rasuah.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/laporkan-rasuah.html
@@ -34,7 +34,7 @@
                 <i class="fa fa-comments"></i>
                 <p>SMS</p>
               </div>
-              <div class="col-33" ng-click="navigateTo('app.')">
+              <div class="col-33" ng-click="navigateTo('app.faks')">
                 <i class="fa fa-print"></i>
                 <p>Faks</p>
               </div>
