--- a/www/templates/themes/expense-dashboard/html/Orang-Awam/CMS.html
+++ b/www/templates/themes/expense-dashboard/html/Orang-Awam/CMS.html
@@ -1,4 +1,4 @@
-<ion-view title="Jabatan Perdana Menteri">
+<ion-view title="CMS">
   <ion-content class="iframe-parent" >
       <iframe class="iframe-wrapper" src="http://www.sprm.gov.my/portaladuan/Modules/Portal/?device=xhtml"></iframe>
   </ion-content>
