--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2170,13 +2170,13 @@ md-sidenav {
     }
 
     h1 {
-      color: #080808;
+      color: #FF9B07;
       font-size: 30px;
       font-weight: 400;
     }
 
     h2 {
-      color: #080808;
+      color: #FF9B07;
       font-size: 16px;
     }
 
