--- a/www/templates/menu/html/menu.html
+++ b/www/templates/menu/html/menu.html
@@ -21,9 +21,9 @@
             <div class="menu-left-header">
                 <img class="user-img" src="img/sprm/icon2.png">
                   <p>
-                      <span class="title">SPRM</span>
+                      <span class="title">LAPORKAN RASUAH</span>
                       <br/>
-                      <span class="sub-title">Suruhanjaya Pencegah Rasuah Malaysia</span>
+                      <span class="sub-title">1-800-88-6000</span>
                   </p>
             </div><!--end menu header section-->
         </div> <!--menu content section-->
