--- a/www/templates/themes/menu-dashboard/html/smkmaca.html
+++ b/www/templates/themes/menu-dashboard/html/smkmaca.html
@@ -1,4 +1,4 @@
-<ion-view title="Akademi PKNS">
+<ion-view title="Sistem Maklumat Kursus MACA">
   <ion-content class="iframe-parent" >
       <iframe class="iframe-wrapper" src="http://maca.sprm.gov.my/ikursus_maca/login.php?device=xhtml"></iframe>
   </ion-content>
